VPC_PUB_PRI_SN_EC2/sg.tf
resource "aws_security_group" "first-sg" {
    name = "first-sg"
    vpc_id = aws_vpc.first-vpc.id
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["49.205.255.101/32"]

    }
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["49.205.250.135/32"]

    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "first-sg"

    }

}
